fix: about us page

--- a/apps/website/mfe/src/assets/i18n/en.json
+++ b/apps/website/mfe/src/assets/i18n/en.json
@@ -549,7 +549,7 @@
     }},
     "ABOUT_US_PAGE": {
       "HERO_SECTION": {
-        "TITLE": "Navigating Seamless Organizing With Clutter Free Finds",
+        "TITLE": "Tidying One Space at a Time With Clutter Free Finds",
         "DESCRIPTION": "Life's demands can quickly lead to clutter and disarray, impacting your productivity, peace of mind, and overall well-being. That's where we come in.",
         "BUTTON_1": "Get a free quote",
         "BUTTON_2": "Book a call"
