chore: add files and imporve code

--- a/apps/website/mfe/src/assets/i18n/en.json
+++ b/apps/website/mfe/src/assets/i18n/en.json
@@ -241,7 +241,7 @@
         "TITLE": "Company",
         "LIST": {
           "ITEM1": "About Us",
-          "ITEM2": "Become A Partner"
+          "ITEM2": "How it Works"
         }
       },
       "PRICING": {
